--- a/4_ASP.NET_CORE/task2/task2WebAPI/task2WebAPI/task2WebAPI.csproj
+++ b/4_ASP.NET_CORE/task2/task2WebAPI/task2WebAPI/task2WebAPI.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Injection" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.1" />
   </ItemGroup>
