--- a/4_ASP.NET_CORE/task2/task2WebAPI/task2WebAPI/task2WebAPI.csproj
+++ b/4_ASP.NET_CORE/task2/task2WebAPI/task2WebAPI/task2WebAPI.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Injection" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.1" />
+    <PackageReference Include="RestSharp" Version="106.3.1" />
   </ItemGroup>
 
 </Project>
