--- a/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/appsettings.json
+++ b/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/appsettings.json
@@ -1,4 +1,21 @@
 {
+  "Log4net": [
+    {
+      "XPath": "/log4net/appender[@name='RollingFile']/file",
+      "Attributes": {
+        "Value": "overrided.log"
+      }
+    },
+    {
+      "XPath": "/log4net/appender[@name='RollingFile']/maximumFileSize",
+      "Attributes": {
+        "Value": "1024KB"
+      }
+    }
+  ],
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=task3local;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
