--- a/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/task3WebAPI.csproj
+++ b/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/task3WebAPI.csproj
@@ -6,14 +6,13 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
-    <Folder Include="Context\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.2.4" />
   </ItemGroup>
 
 </Project>
