--- a/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/log4net.config
+++ b/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/log4net.config
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-  <appender name="DebugAppender" type="log4net.Appender.DebugAppender" >
+  <appender name="RollingFile" type="log4net.Appender.FileAppender">
+    <file type="log4net.Util.PatternString" value="%property{appRoot}\app.log" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      <conversionPattern value="%-5p %d{hh:mm:ss} %message%newline" />
     </layout>
   </appender>
+
   <root>
-    <level value="ALL"/>
-    <appender-ref ref="DebugAppender" />
+    <level value="DEBUG" />
+    <appender-ref ref="RollingFile" />
   </root>
-  <logger name="LOGGER">
-    <appender-ref ref="LogFileAppender"/>
-  </logger>
 </log4net>
