--- a/4_ASP.NET_CORE/task4/server_task4/server_task4/server_task4.csproj
+++ b/4_ASP.NET_CORE/task4/server_task4/server_task4/server_task4.csproj
@@ -7,12 +7,12 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
     <Folder Include="Logger\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
