--- a/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/task3WebAPI.csproj
+++ b/4_ASP.NET_CORE/task3/task3WebAPI/task3WebAPI/task3WebAPI.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.2" />
