--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.1",
+    "axios": "^0.18.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
