--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-stars": "^2.2.5",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-form": "^7.4.2",
