--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
@@ -7,6 +7,8 @@
     "@material-ui/core": "^1.4.1",
     "axios": "^0.18.0",
     "react": "^16.4.1",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-grid-gallery": "^0.5.1",
     "react-redux": "^5.0.7",
