--- a/4_ASP.NET_CORE/task4/NLAYER_server/FilmsCatalog/FilmsCatalog/WebApi/FilmsCtalog.WebApi.csproj
+++ b/4_ASP.NET_CORE/task4/NLAYER_server/FilmsCatalog/FilmsCatalog/WebApi/FilmsCtalog.WebApi.csproj
@@ -14,7 +14,8 @@
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
   </ItemGroup>
 
   <ItemGroup>
