--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://Liza123-321.github.io/React_task1",
   "private": true,
   "dependencies": {
+    "@aspnet/signalr": "^1.0.3",
     "@material-ui/core": "^1.4.1",
     "axios": "^0.18.0",
     "react": "^16.4.1",
