--- a/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
+++ b/4_ASP.NET_CORE/task4/client_task4/client-task4/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@material-ui/icons": "^2.0.0",
     "husky": "^0.14.3",
+    "jest": "^23.5.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
